# ztype

./: .gitignore  CMakeLists.txt  License.md  ProjectManager.md  README.md  Test.cpp  Type.md  a.out  compile_linux  entity.cpp  entity.hpp  generate_doxygen  main.cpp  rtype  sparse_array.hpp  test.c  test.cpp
.github/workflows/: rtype_actions.yaml
assets/conf/: project-manager.json  scenes.json  sounds.json  sprite.json  sprites.json
assets/conf/scene/: game_level-1.json  tutorial.json
assets/conf/sprites_animation/: black_magic.json  boss.json  bullet.json  enemy.json  enemy_02.json  enemy_03.json  ship.json
assets/lang/: en.json  es.json  fr.json  jp.json  load.json  placeholder.json
bootsrap/: .gitignore  step_one.cpp  step_two.cpp  step_two_.cpp  step_two__.cpp  step_zero.cpp
bootsrap/trash_test/: lambda.cpp  test_one.cpp
client/: CMakeLists.txt
client/includes/: client.hpp
client/src/: client.cpp  main.cpp
cmake/: FindAsioLib.cmake  FindJsonLib.cmake  FindSfmlLib.cmake
documentation/doxygen/: rtype_doxygen.conf
documentation/doxygen/html/: AudioManager_8hpp_source.html  Audio_8hpp_source.html  Clock_8hpp_source.html  Color_8hpp_source.html  Drawable_8hpp_source.html  Ecs_8hpp_source.html  Event_8hpp_source.html  Font_8hpp_source.html  Game_2Init_8hpp_source.html  Game_8hpp_source.html  Globals_8hpp_source.html  Graphics_8hpp_source.html  IAudioModule_8hpp_source.html  IClock_8hpp_source.html  IColor_8hpp_source.html  IDrawable_8hpp_source.html  IEvent_8hpp_source.html  IFont_8hpp_source.html  IImage_8hpp_source.html  IKeyboard_8hpp_source.html  IMouse_8hpp_source.html  IRenderTarget_8hpp_source.html  IShape_8hpp_source.html  ISprite_8hpp_source.html  ISystem_8hpp_source.html  IText_8hpp_source.html  ITexture_8hpp_source.html  ITime_8hpp_source.html  ITransformable_8hpp_source.html  IVector2_8hpp_source.html  IVector3_8hpp_source.html  IWindow_8hpp_source.html  Image_8hpp_source.html  Keyboard_8hpp_source.html  Languages_8hpp_source.html  Menu_2Init_8hpp_source.html  Mouse_8hpp_source.html  MusicManager_8hpp_source.html  Network_2Client_8hpp_source.html  NonCopyable_8hpp_source.html  (+244 more)
documentation/doxygen/latex/: AudioManager_8hpp_source.tex  Audio_8hpp_source.tex  Clock_8hpp_source.tex  Color_8hpp_source.tex  Drawable_8hpp_source.tex  Ecs_8hpp_source.tex  Event_8hpp_source.tex  Font_8hpp_source.tex  Game_2Init_8hpp_source.tex  Game_8hpp_source.tex  Globals_8hpp_source.tex  Graphics_8hpp_source.tex  IAudioModule_8hpp_source.tex  IClock_8hpp_source.tex  IColor_8hpp_source.tex  IDrawable_8hpp_source.tex  IEvent_8hpp_source.tex  IFont_8hpp_source.tex  IImage_8hpp_source.tex  IKeyboard_8hpp_source.tex  IMouse_8hpp_source.tex  IRenderTarget_8hpp_source.tex  IShape_8hpp_source.tex  ISprite_8hpp_source.tex  ISystem_8hpp_source.tex  IText_8hpp_source.tex  ITexture_8hpp_source.tex  ITime_8hpp_source.tex  ITransformable_8hpp_source.tex  IVector2_8hpp_source.tex  IVector3_8hpp_source.tex  IWindow_8hpp_source.tex  Image_8hpp_source.tex  Keyboard_8hpp_source.tex  Languages_8hpp_source.tex  Menu_2Init_8hpp_source.tex  Mouse_8hpp_source.tex  MusicManager_8hpp_source.tex  Network_2Client_8hpp_source.tex  NonCopyable_8hpp_source.tex  (+181 more)
includes/: AudioManager.hpp  Client.hpp  Component.hpp  Ecs.hpp  Game.hpp  Globals.hpp  Languages.hpp  MusicManager.hpp  Server.hpp  SpriteManager.hpp  System.hpp
latex/: refman.tex
modules/: IAudioModule.hpp  SFMLAudioModule.hpp
server/: CMakeLists.txt  FindSfmlLib.cmake
server/includes/: server.hpp
server/src/: main.cpp  server.cpp
src/: AudioManager.hpp  Component.hpp  ComponentManager.hpp  Ecs.hpp  Game.hpp  Languages.cpp  MusicManager.hpp  ProjectComponent.hpp  ProjectManager.hpp  RtypeServer.cpp  Scene.hpp  SceneComponent.hpp  SceneManager.hpp  SceneSystem.hpp  Server.cpp  SpriteManager.hpp  StorageManager.hpp  System.hpp  User.hpp  UserComponent.hpp  UserComponentManager.hpp  UserSystem.hpp  ecs.hpp  main.cpp  main_client.cpp  main_server.cpp  main_server.hpp  sfml_ref.hpp
src/ECS/Systems/: AnimationSystem.cpp  DisplaySystem.cpp  EventSystem.cpp  PositionSystem.cpp  System.hpp
src/Network/: Client.cpp  Client.hpp  Server.cpp
src/PAML/: Audio.hpp  Graphics.hpp  Readme.md  System.hpp  Window.hpp  z_test_interface.cpp
src/PAML/Graphics/: IColor.hpp  IDrawable.hpp  IFont.hpp  IImage.hpp  IRenderTarget.hpp  IRenderWindow.hpp  IShape.hpp  ISprite.hpp  IText.hpp  ITexture.hpp  ITransformable.hpp
src/PAML/System/: IClock.hpp  INonCopiable.hpp  INonCopyable.hpp  ISystem.hpp  ITime.hpp  IVector2.hpp  IVector3.hpp  Type.hpp
src/PAML/Window/: IEvent.hpp  IKeyBoard.hpp  IKeyboard.hpp  IMouse.hpp  IWindow.hpp
src/PAML_sfml/Graphics/: Color.hpp  Drawable.hpp  Font.hpp  Image.hpp  Shape.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transformable.hpp
src/PAML_sfml/System/: Clock.hpp  NonCopyable.hpp  System.hpp  Time.hpp  Type.hpp  Vector2.hpp  Vector3.hpp
src/PAML_sfml/Window/: Event.hpp  Keyboard.hpp  Mouse.hpp  Window.hpp
src/ProjectManager/: Ecs.hpp  ProjectComponent.hpp  ProjectComponentManager.hpp  ProjectManager.hpp
src/SceneManager/: Scene.hpp  SceneComponent.hpp  SceneComponentManager.hpp  SceneManager.hpp
src/Server/: Server.hpp  ServerComponent.hpp  ServerComponentManager.hpp  ServerManager.hpp  ServerProjectManager.hpp
src/Server/Systems/: System.hpp  UserSystem.hpp
src/User/: User.hpp  UserComponent.hpp  UserComponentManager.hpp  UserManager.hpp  UserProjectManager.hpp
src/User/Game/: init.cpp
src/User/Network/: init.cpp
src/User/Systems/: DisplaySystem.cpp  EventSystem.cpp  PositionSystem.cpp  SceneSystem.cpp  System.hpp  UserSystem.hpp
src/UserClient/: Client.hpp  ClientComponent.hpp  ClientComponentManager.hpp  ClientManager.hpp  ClientProjectManager.hpp
src/UserClient/Network/: init.cpp
src/UserClient/Systems/: AnimationSystem.cpp  ClientSystem.hpp  DisplaySystem.cpp  EventSystem.cpp  PositionSystem.cpp  System.hpp
src/UserServer/: Server.hpp  ServerComponent.hpp  ServerComponentManager.hpp  ServerManager.hpp  ServerProjectManager.hpp
src/nlohmann/: json.hpp
(+76 files in other folders)
